# libsql

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  docker-wrapper.sh
.github/workflows/: publish-server.yml  release-libsql.yml  rust.yml
bottomless/: Cargo.toml
bottomless-cli/src/: main.rs
bottomless/src/: replicator.rs
libsql-ffi/bundled/SQLite3MultipleCiphers/: CMakeLists.txt
libsql-ffi/bundled/SQLite3MultipleCiphers/src/: cipher_config.c  cipher_wxaes256.c  codec_algos.c  codecext.c  sqlite3mc.c  sqlite3mc_vfs.c
libsql-ffi/bundled/bindings/: bindgen.rs  session_bindgen.rs
libsql-ffi/bundled/src/: sqlite3.h
libsql-server/: Cargo.toml
libsql-server/src/: lib.rs  main.rs
libsql-server/src/namespace/: meta_store.rs
libsql-server/src/replication/primary/: logger.rs
libsql-server/src/rpc/: streaming_exec.rs
libsql-server/src/test/: bottomless.rs
libsql-server/tests/: tests.rs
libsql-server/tests/bottomless/: README.md  basic_restore.rs  fixtures.rs  minio_interrupted.rs  mod.rs  network_partition.rs  sqld_interrupted.rs
libsql-server/tests/cluster/: mod.rs  replication.rs
libsql-sqlite3/: .gitignore
libsql-sqlite3/ext/crr/rs/bundle/: Cargo.toml
libsql-sqlite3/ext/crr/rs/bundle_static/: Cargo.toml
libsql-sqlite3/ext/crr/rs/core/: Cargo.toml
libsql-sqlite3/ext/crr/rs/fractindex-core/: Cargo.toml
libsql-sqlite3/src/: pager.c  sqliteInt.h  wal.c  wal.h
libsql-sqlite3/test/rust_suite/: Cargo.toml
libsql-sqlite3/test/rust_suite/src/: virtual_wal.rs
libsql-sys/src/wal/: either.rs  ffi.rs  mod.rs  sqlite3_wal.rs  wrapper.rs
(+5 files in other folders)
